--- a/LangDetector_Trush.ipynb
+++ b/LangDetector_Trush.ipynb
@@ -11,24 +11,27 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 54,
+      "metadata": {
+        "id": "zajicV449j9h"
+      },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "from tensorflow.data import Dataset\n",
-        "from tensorflow.keras.utils import plot_model\n",
-        "from sklearn.model_selection import train_test_split\n",
         "from tensorflow.keras import Sequential, Model, Input\n",
         "from tensorflow.keras.layers import Dense, Dropout, TextVectorization, Embedding, Bidirectional, LSTM"
-      ],
-      "metadata": {
-        "id": "zajicV449j9h"
-      },
-      "execution_count": 54,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 55,
+      "metadata": {
+        "id": "fldCg2m7-NV0"
+      },
+      "outputs": [],
       "source": [
         "def get_mappings(langs):\n",
         "    words = []\n",
@@ -41,15 +44,15 @@
         "            words.extend(file_words)\n",
         "\n",
         "    return words, tags"
-      ],
-      "metadata": {
-        "id": "fldCg2m7-NV0"
-      },
-      "execution_count": 55,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 61,
+      "metadata": {
+        "id": "-ss4CadJAIVj"
+      },
+      "outputs": [],
       "source": [
         "langs = [\"dutch\", \"hungarian\", \"portugese\"]\n",
         "words, tags = get_mappings(langs)\n",
@@ -63,20 +66,11 @@
         "\n",
         "test_dataset = Dataset.from_tensor_slices((tf.convert_to_tensor(test_words, dtype=tf.string),\n",
         "                                           tf.convert_to_tensor(test_tags, dtype=tf.string)))"
-      ],
-      "metadata": {
-        "id": "-ss4CadJAIVj"
-      },
-      "execution_count": 61,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "for example, label in train_dataset.take(1):\n",
-        "  print('text: ', example.numpy())\n",
-        "  print('label: ', label.numpy())"
-      ],
+      "execution_count": 66,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -84,20 +78,42 @@
         "id": "eQ9g9jhhWGHR",
         "outputId": "d6a52288-ace3-4a09-bd04-7b2b94f5d7de"
       },
-      "execution_count": 66,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "text:  b'ik'\n",
             "label:  b'dutch'\n"
           ]
         }
+      ],
+      "source": [
+        "for example, label in train_dataset.take(1):\n",
+        "  print('text: ', example.numpy())\n",
+        "  print('label: ', label.numpy())"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 82,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y2KzQmhxWlby",
+        "outputId": "dd051d3e-e853-4c8d-aef6-393d885ac5a8"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Top-10 most frequent characters: ['' '[UNK]' 'e' 'a' 'r' 'o' 'n' 't' 'i' 's']\n",
+            "Top-10 least frequent characters: ['ú' 'ê' 'ű' 'â' 'ë' 'ï' 'ô' 'è' 'õ' '7']\n"
+          ]
+        }
+      ],
       "source": [
         "ALPHABETS_SIZE = 1000\n",
         "encoder = TextVectorization(max_tokens=ALPHABETS_SIZE, split=\"character\")\n",
@@ -108,41 +124,11 @@
         "least_frequent_chars = vocab[-10:]\n",
         "print(f'Top-10 most frequent characters: {most_frequent_chars}')\n",
         "print(f'Top-10 least frequent characters: {least_frequent_chars}')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Y2KzQmhxWlby",
-        "outputId": "dd051d3e-e853-4c8d-aef6-393d885ac5a8"
-      },
-      "execution_count": 82,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Top-10 most frequent characters: ['' '[UNK]' 'e' 'a' 'r' 'o' 'n' 't' 'i' 's']\n",
-            "Top-10 least frequent characters: ['ú' 'ê' 'ű' 'â' 'ë' 'ï' 'ô' 'è' 'õ' '7']\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model = Sequential([\n",
-        "    encoder,\n",
-        "    tf.keras.layers.Embedding(len(encoder.get_vocabulary()), 64, mask_zero=True),\n",
-        "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64, return_sequences=True)),\n",
-        "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32)),\n",
-        "    tf.keras.layers.Dense(64, activation='relu'),\n",
-        "    tf.keras.layers.Dropout(0.5),\n",
-        "    tf.keras.layers.Dense(1)\n",
-        "])\n",
-        "model.compile(loss=\"categorical_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
-        "model.summary()"
-      ],
+      "execution_count": 74,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -150,11 +136,10 @@
         "id": "FFzIdWxXAJlL",
         "outputId": "069e3b37-e564-49b4-bd0d-87bd17f17aa0"
       },
-      "execution_count": 74,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Model: \"sequential_8\"\n",
             "_________________________________________________________________\n",
@@ -179,58 +164,71 @@
             "_________________________________________________________________\n"
           ]
         }
+      ],
+      "source": [
+        "model = Sequential([\n",
+        "    encoder,\n",
+        "    tf.keras.layers.Embedding(len(encoder.get_vocabulary()), 64, mask_zero=True),\n",
+        "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(64, return_sequences=True)),\n",
+        "    tf.keras.layers.Bidirectional(tf.keras.layers.LSTM(32)),\n",
+        "    tf.keras.layers.Dense(64, activation='relu'),\n",
+        "    tf.keras.layers.Dropout(0.5),\n",
+        "    tf.keras.layers.Dense(1)\n",
+        "])\n",
+        "model.compile(loss=\"categorical_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
+        "model.summary()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "history = model.fit(train_dataset, epochs=10, validation_data=test_dataset, validation_steps=30)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "IFRO_tI7Ne7L"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "history = model.fit(train_dataset, epochs=10, validation_data=test_dataset, validation_steps=30)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "kaOxLMkaRQpq"
+      },
+      "outputs": [],
       "source": [
         "test_loss, test_acc = model.evaluate(test_dataset)\n",
         "\n",
         "print('Test Loss:', test_loss)\n",
         "print('Test Accuracy:', test_acc)"
-      ],
-      "metadata": {
-        "id": "kaOxLMkaRQpq"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Почти закончил, не удалось додебажить этап подачи данных в нейросеть."
-      ],
       "metadata": {
         "id": "2eU1SrQ6YfiL"
-      }
+      },
+      "source": [
+        "## Почти закончил, не удалось додебажить этап подачи данных в нейросеть."
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "LangDetector.ipynb",
+      "provenance": []
+    },
+    "gpuClass": "standard",
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
     "language_info": {
       "name": "python"
     },
-    "orig_nbformat": 4,
-    "colab": {
-      "name": "LangDetector.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "gpuClass": "standard"
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
